--- a/PlanIt/src/assets/cmps/_App-header.scss
+++ b/PlanIt/src/assets/cmps/_App-header.scss
@@ -1,6 +1,8 @@
 .app-header {
   display: flex;
   position: absolute;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans,
+  Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
   inset: 0;
   justify-content: space-between;
   align-items: center;
@@ -136,7 +138,6 @@
       position: relative;
       display: flex;
       align-items: center;
-
     }
 
     .notification-icon {
@@ -191,12 +192,24 @@
     .notification-item:hover {
       background-color: #f5f5f5;
     }
-
+    .search-container {
+      display: flex;
+      align-items: center;
+      width: 100%;
+    }
     .search-bar {
-      padding: 6px 12px;
-      border: 1px solid #e0e0e0;
-      border-radius: 4px;
-      font-size: 0.875rem;
+      height: 32px;
+      width: 100%;
+      padding: 0.75rem 0px 0.75rem 30px;
+      box-sizing: border-box;
+      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+        Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
+      outline: none;
+      border-radius: 5px;
+      font-size: 14px;
+      line-height: 20px;
+      border: 1px solid hsla(0, 0%, 100%, 0.16);
+      box-shadow: none;
     }
 
     .icon {
