--- a/PlanIt/src/assets/cmps/_BoardHeader.scss
+++ b/PlanIt/src/assets/cmps/_BoardHeader.scss
@@ -1,122 +1,126 @@
 .board-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans,
+    Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #ffffff;
+  padding: 0 16px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  height: 60px;
+  position: fixed;
+  margin-top: 48px;
+  left: 10px;
+  width: 100%;
+  inset: 0;
+
+  .board-header-left {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    background-color: #ffffff;
-    padding: 0 16px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-    height: 60px;
-    position: fixed;
-    margin-top: 48px;
-    left: 10px;
-    width: 100%;
-    inset: 0;
 
-    .board-header-left {
-        display: flex;
-        align-items: center;
-
-        .board-title {
-            font-size: 18px;
-            line-height: 32px;
-            text-align: start;
-            margin-right: 0.5rem;
-        }
-
-        .board-star {
-            font-size: 1.2rem;
-            margin-right: 1rem;
-            cursor: pointer;
-        }
-
-        .board-icon {
-            font-size: 1.2rem;
-            margin-right: 2rem;
-            cursor: pointer;
-        }
-
-        .dropdown {
-            position: relative;
-
-            .dropdown-toggle {
-                padding: 0.5rem 1rem;
-                border: none;
-                border-radius: 3px;
-                cursor: pointer;
-                font-size: 0.9rem;
-
-                &:hover {
-                    background-color: rgba(255, 255, 255, 0.5);
-                }
-            }
-
-            .dropdown-content {
-                display: none;
-                position: absolute;
-                background-color: white;
-                box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-                z-index: 1;
-                min-width: 160px;
-
-                .dropdown-item {
-                    padding: 12px 16px;
-                    cursor: pointer;
-                    background-color: white;
-                    color: #333;
-                    text-align: left;
-
-                    &:hover {
-                        background-color: #ddd;
-                    }
-
-                    .more-options {
-                        font-size: 1.5rem;
-                        cursor: pointer;
-                    }
-                }
-            }
-
-            &:hover .dropdown-content {
-                display: block;
-            }
-        }
-
-        .board-button {
-            padding: 0.5rem 1rem;
-            border: none;
-            border-radius: 3px;
-            margin-right: 0.5rem;
-            cursor: pointer;
-            font-size: 0.9rem;
-            display: flex;
-            align-items: center;
-
-            &:hover {
-                background-color: rgba(255, 255, 255, 0.5);
-            }
-        }
+    .board-title {
+      font-size: 18px;
+      line-height: 32px;
+      text-align: start;
+      margin-right: 0.5rem;
     }
 
-    .board-header-right {
-        display: flex;
-        align-items: center;
+    .board-star {
+      font-size: 1.2rem;
+      margin-right: 1rem;
+      cursor: pointer;
     }
+
+    .board-icon {
+      font-size: 1.2rem;
+      margin-right: 2rem;
+      cursor: pointer;
+    }
+
+    .dropdown {
+      position: relative;
+
+      .dropdown-toggle {
+        padding: 0.5rem 1rem;
+        border: none;
+        border-radius: 3px;
+        cursor: pointer;
+        font-size: 0.9rem;
+
+        &:hover {
+          background-color: rgba(255, 255, 255, 0.5);
+        }
+      }
+
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: white;
+        box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+        min-width: 160px;
+
+        .dropdown-item {
+          padding: 12px 16px;
+          cursor: pointer;
+          background-color: white;
+          color: #333;
+          text-align: left;
+
+          &:hover {
+            background-color: #ddd;
+          }
+
+          .more-options {
+            font-size: 1.5rem;
+            cursor: pointer;
+          }
+        }
+      }
+
+      &:hover .dropdown-content {
+        display: block;
+      }
+    }
+
+    .board-button {
+      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+        Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: 3px;
+      margin-right: 0.5rem;
+      cursor: pointer;
+      font-size: 0.9rem;
+      display: flex;
+      align-items: center;
+
+      &:hover {
+        background-color: rgba(255, 255, 255, 0.5);
+      }
+    }
+  }
+
+  .board-header-right {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .members {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .member {
-    display: flex;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    background-color: #ccc;
-    align-items: center;
-    justify-content: center;
-    color: #dbdbdb;
-    text-align: center;
-    font-size: 14px;
+  display: flex;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: #ccc;
+  align-items: center;
+  justify-content: center;
+  color: #dbdbdb;
+  text-align: center;
+  font-size: 14px;
 }
