--- a/PlanIt/src/assets/cmps/_BoardList.scss
+++ b/PlanIt/src/assets/cmps/_BoardList.scss
@@ -74,10 +74,18 @@
       align-items: center;
 
       h3 {
+        display: block;
+        padding: 6px 8px 6px 12px;
+        background-color: transparent;
+        overflow: hidden;
         font-size: 14px;
         font-weight: 600;
+        line-height: 20px;
         margin: 0;
         color: #172b4de0;
+        white-space: normal;
+        cursor: pointer;
+        overflow-wrap: anywhere;
       }
     }
 
@@ -97,20 +105,25 @@
     }
 
     .tasks {
-      max-height: 80vh;
+      max-height: 100vh;
       overflow-y: auto;
       margin-top: 8px;
       scrollbar-width: thin;
+      padding: 2px;
 
       .task {
+        z-index: 10;
+        min-height: 24px;
+        padding: 8px 12px 4px;
         background-color: #ffffff;
         border-radius: 8px;
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+        box-shadow: 0px 1px 1px rgba(9, 30, 66, 0.25),
+          0px 0px 1px rgba(9, 30, 66, 0.31);
         padding: 8px;
         margin-bottom: 8px;
         display: flex;
         flex-direction: column;
-        gap: 8px;
+        gap: 4px;
 
         .task-title {
           margin: 0;
@@ -153,7 +166,6 @@
             line-height: 24px;
             color: #172b4d;
           }
-
         }
 
         &:hover {
@@ -172,7 +184,6 @@
     padding: 0;
   }
 
-
   .board-card {
     width: 100%;
     margin-bottom: 10px;
@@ -181,5 +192,4 @@
   .board-title {
     font-size: 16px;
   }
-
 }
